[project]
name = "lg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aqsashah", email = "aqsanor665@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.0.9",
    "langgraph>=0.2.73",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lg = "lg:main"
simple_flow = "lg.simple_workflow:run_chain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
